[package]
name = "wizrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.0"
glutin = "0.28"
winit = "0.26.1"

serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }

png = "0.17.1"
palette = "0.2.1"
assert_hex = "0.2.2"

itertools = "0.10.3"

ordered-float = "2.0"